--- a/BTS.html
+++ b/BTS.html
@@ -4,7 +4,58 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" >
 </head>
-<body style="background-image: https://i.pinimg.com/originals/86/b4/cc/86b4ccff7d40d856bfb2cb494421fc56.jpg">
-<p>哈囉, 台東大學</p>
+<body style="background-color: rgb(0,0,0);">
+<center><img src="https://media.nownews.com/nn_media/thumbnail/2020/09/1599009153864-3540fb78132b48e2be741bc29eb7c883-800x533.jpg?unShow=false"></center>
+<title style="color: white">防彈少年團</title>
+<center><h1 style="color: white">BTS</h1></center>
+<center><p style="color: white">中文名:防彈少年團</p></center>
+<center><p style="color: white">經紀公司:Big Hit Entertainment</p></center>
+<center><p style="color: white">出道日期:2013年6月13日</p></center>
+<center><p style="color: white">出道歌曲:〈No More Dream〉</p></center>
+<center><p style="color: white">成員:7名</p></center>
+<center><p style="color: white">粉絲名:ARMY</p></center>
+<h1 style="color: red">成員介紹:</h1>
+<center><img src="https://img.itw01.com/images/2019/03/02/19/2053_foRcIc_YOX8MEC.jpg!r800x0.jpg"></center>
+<center><h1 style="color: blue">RAP MONSTER</h1></center>
+<center><p style="color: white">中文名:金南俊</p></center>
+<center><p style="color: white">在BTS擔任隊長、主Rapper</center>
+<center><p style="color: white">生日：1994年09月12日</p></center>
+<center><p style="color: white">出生地：京畿道高陽市</p></center>
+<center><img src="https://d.share.photo.xuite.net/jennyher/1d56e45/20323162/1186288107_m.jpg"></center>
+<center><h1 style="color: pink">JIN</h1></center>
+<center><p style="color: white">中文名:金碩珍</p></center>
+<center><p style="color: white">在BTS擔任Vocal</center>
+<center><p style="color: white">生日：1992年12月04日</p></center>
+<center><p style="color: white">出生地：京畿道安養市</p></center>
+<center><img src="https://s2.fafa01.com/uploads/04/7/945521/1557649534353.jpg"></center>
+<center><h1 style="color: lightgray">SUGA</h1></center>
+<center><p style="color: white">中文名:閔允其</p></center>
+<center><p style="color: white">在BTS擔任領Rapper</center>
+<center><p style="color: white">生日：1993年03月09日</p></center>
+<center><p style="color: white">出生地：大邱廣域市</p></center>
+<center><img src="https://i.imgur.com/g9h3DH4.jpg"></center>
+<center><h1 style="color: white">J-HOPE</h1></center>
+<center><p style="color: white">中文名:鄭號錫</p></center>
+<center><p style="color: white">在BTS擔任副Rapper、主領舞</center>
+<center><p style="color: white">生日：1994年02月18日</p></center>
+<center><p style="color: white">出生地：光州廣域市</p></center>
+<center><img src="https://pic.pimg.tw/hanae220273995/1493901613-244792508_n.jpg"></center>
+<center><h1 style="color: gold">JIMIN</h1></center>
+<center><p style="color: white">中文名:朴智旻</p></center>
+<center><p style="color: white">在BTS擔任Vocal、主領舞</center>
+<center><p style="color: white">生日：1995年10月13日</p></center>
+<center><p style="color: white">出生地：釜山廣域市</p></center>
+<center><img src="https://i.imgur.com/xSCYBzW.jpg"></center>
+<center><h1 style="color: green">V</h1></center>
+<center><p style="color: white">中文名:金泰亨</p></center>
+<center><p style="color: white">在BTS擔任Vocal</center>
+<center><p style="color: white">生日：1995年12月30日</p></center>
+<center><p style="color: white">出生地：大邱廣域市</p></center>
+<center><img src="https://cdn2.ettoday.net/images/4484/4484278.jpg" width="500"></center>
+<center><h1 style="color: purple">JUNGKOOK</h1></center>
+<center><p style="color: white">中文名:田柾國</p></center>
+<center><p style="color: white">在BTS擔任Vocal</center>
+<center><p style="color: white">生日：1997年09月01日</p></center>
+<center><p style="color: white">出生地：釜山廣域市</p></center>
 </body>
 </html>
