--- a/sanse.html
+++ b/sanse.html
@@ -22,10 +22,10 @@
  <span class="m_標1">韓團大補帖</span>
  <dt class="m_標2"><a id="m_1" rel="noreferrer">《韓國男團》</a></dt><br><br>
  <dt class="m_內"><a id="m_2" rel="noreferrer">SEVENTEEN</a></dt>
- <dt class="m_內1"><br><img src="SEVENTEEN.jpg" alt="" width="450" height="300" hspace="50" align="left">
+ <dt class="m_內1"><br><img src="SEVENTEEN.jpg" alt="" width="450" height="300" hspace="50">
  團體總共13人，其中也分成了3個分隊:Hiphop team、Vocal team、Performer team<wbr>隊名寓意"13名成員+3個分隊+1個整體"<wbr>粉絲名:CARAT
  <br><br>
- <center>詳細資訊：
+ <center>詳細資訊：</center>
  <br><a href="https://zh.wikipedia.org/wiki/Seventeen_(%E7%B5%84%E5%90%88)">SAY THE NAME</a>
  <br><br>
 
@@ -33,7 +33,7 @@
  <dt class="m_內1"><br><img src="EXO.jpg" alt="" width="450" height="300" hspace="50" align="left">
  原有12個人退團之後變成9個人，每個人都有超能力<wbr>小分隊:EXO-CBX 、 EXO-SC<wbr>隊名寓意"從未知星球來的新星"<wbr>粉絲名:EXO-L
  <br><br>
- <center>詳細資訊：
+ <center>詳細資訊：</center>
  <br><a href="https://zh.wikipedia.org/wiki/EXO">WE ARE ONE</a>
  <br><br>
 
@@ -41,7 +41,7 @@
  <dt class="m_內1"><br><img src="SJ.jpg" alt="" width="450" height="300" hspace="50" align="left">
  被媒體稱為"韓流帝王"<wbr>小分隊:SUPERJUIOR-K.R.Y 、SUPERJUIOR D&E <wbr>粉絲名:E.L.F
  <br><br>
- <center>詳細資訊：
+ <center>詳細資訊：</center>
  <br><a href="https://zh.wikipedia.org/wiki/Super_Junior">SORRY SORRY</a>
  <br><br>
 
@@ -49,7 +49,7 @@
  <dt class="m_內1"><br><img src="NCT.jpg" alt="" width="450" height="300" hspace="50" align="left">
  團體共23個人，成員無上限的組合<wbr>小分隊:NCT U 、NCT 127 、 NCT DREAM 、WAY V<wbr>隊名寓意"NCT取自「Neo Culture Technology（新文化技術）」的首字母"<wbr>粉絲名:NCTzen
  <br><br>
- <center>詳細資訊：
+ <center>詳細資訊：</center>
  <br><a href="https://zh.wikipedia.org/wiki/NCT">TO THE WORLD</a>
  <br><br>
 
@@ -57,7 +57,7 @@
  <dt class="m_內1"><br><img src="ASTRO.jpg" alt="" width="450" height="300" hspace="50" align="left">
  隊中有著世界級臉蛋"車銀優"<wbr>有兩個小分隊<wbr>粉絲名:AROHA
  <br><br>
- <center>詳細資訊：
+ <center>詳細資訊：</center>
  <br><a href="https://zh.wikipedia.org/wiki/ASTRO_(%E9%9F%93%E5%9C%8B%E9%9F%B3%E6%A8%82%E5%9C%98%E9%AB%94)">WANNA BE YOUR STAR</a>
  <br><br>
   
