--- a/sanse.html
+++ b/sanse.html
@@ -30,11 +30,11 @@
  <br><br>
 
  <dt class="m_內"><a id="m_3" rel="noreferrer">EXO</a></dt>
- <dt class="m_內1"><br><img src="EXO.jpg" alt="" width="450" height="300" hspace="50" align="left">
  原有12個人退團之後變成9個人，每個人都有超能力<wbr>小分隊:EXO-CBX 、 EXO-SC<wbr>隊名寓意"從未知星球來的新星"<wbr>粉絲名:EXO-L
  <br><br>
  <center>詳細資訊：</center>
- <br><a href="https://zh.wikipedia.org/wiki/EXO">WE ARE ONE</a>
+ <center><a href="https://zh.wikipedia.org/wiki/EXO">WE ARE ONE</a></center>
+ <dt class="m_內1"><br><img src="EXO.jpg" alt="" width="450" height="300" hspace="50">
  <br><br>
 
  <dt class="m_內"><a id="m_4" rel="noreferrer">SUPERJUIOR</a></dt>
@@ -46,7 +46,6 @@
  <br><br>
 
  <dt class="m_內"><a id="m_5" rel="noreferrer">NCT</a></dt>
- <dt class="m_內1"><br><img src="NCT.jpg" alt="" width="450" height="300" hspace="50">
  團體共23個人，成員無上限的組合<wbr>小分隊:NCT U 、NCT 127 、 NCT DREAM 、WAY V<wbr>隊名寓意"NCT取自「Neo Culture Technology（新文化技術）」的首字母"<wbr>粉絲名:NCTzen
  <br><br>
  <center>詳細資訊：</center>
@@ -55,7 +54,6 @@
  <br><br>
 
  <dt class="m_內"><a id="m_4" rel="noreferrer">ASTRO</a></dt>
- <dt class="m_內1"><br><img src="ASTRO.jpg" alt="" width="450" height="300" hspace="50">
  隊中有著世界級臉蛋"車銀優"<wbr>有兩個小分隊<wbr>粉絲名:AROHA
  <br><br>
  <center>詳細資訊：</center>
